<resources>
    <string name="app_name">Calories Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="timer_label">Time</string>
    <string name="latitude_label">Latitude</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="longitude_label">Longitude</string>
    <string name="altitude_label">Altitude</string>
    <string name="velocity_label">Velocity</string>
    <string name="average_velocity_label">Average Velocity</string>
    <string name="location_label">Location</string>
    <string name="m_a_s_l">m a.s.l.</string>
    <string name="meters_per_second">m/s</string>
    <string name="kilometers_per_hour">km/h</string>
    <string name="default_coordinates">00° 00\' 00\"</string>
    <string name="default_timer_value">00:00:00.000</string>
    <string name="default_velocity">0 m/s</string>
    <string name="default_altitude">0 m a.s.l.</string>
    <string name="tracking_started">Tracking Started</string>
    <string name="tracking_finished">Tracking Finished</string>
    <string name="tracking_paused">Tracking Paused</string>
    <string name="tracking_resumed">Tracking Resumed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_properties">Properties</string>
    <string name="title_activity_map">Map</string>
    <string name="output_file_type">Output File Type</string>
    <string name="kml_filetype">.kml</string>
    <string name="gpx_filetype">.gpx</string>
    <string name="map_points">Map Points</string>
    <string name="no_points">No points</string>
    <string name="map_shown">Show map</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="kilogram_unit">kg</string>
    <string name="centimeter_unit">cm</string>
    <string name="user_age">Age</string>
    <string name="user_gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="file_type_change_not_allowed">File type change is not allowed when tracking is enabled.</string>
    <string name="no_sharing_app_found">There is no sharing app found.</string>
    <string name="wrong_file_type_selected">This file does not contains track or activity data.</string>
    <string name="no_file_manager_installed">File manager not found.</string>
    <string name="parsing_error">An error occurred while parsing file.</string>
    <string name="unknown_error">Something went wrong.</string>
    <string name="calories_burned">Calories burned</string>
    <string name="kcal">kcal</string>
    <string name="default_kcal">0 kcal</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="interpolation_label">Interpolation</string>
    <string name="activity_type_running">Running</string>
    <string name="activity_type_walking">Walking</string>
    <string name="activity_type_header">Activity Type</string>
    <string name="activity_stats">Activity Statistics</string>
    <string name="total_distance">Total Distance</string>
    <string name="import_file">Import GPX/KML File</string>
    <string name="write_external_storage_permission_granted">Write external storage permission granted.</string>
    <string name="write_external_storage_permission_denied">Write external storage permission denied. In order to use Import File functionality you must grant permission.</string>
    <string name="zero">0</string>
    <string name="meters">m</string>
    <string name="kilometers">km</string>
    <string name="total_time">Total Time</string>
    <string name="nothing_to_share_no_file">There is nothing to share. Load file to import any data.</string>
    <string name="nothing_to_share_no_activity">There is nothing to share. Start activity to fill information.</string>
    <string name="activity_is_running">Activity is running. To share results stop activity.</string>
</resources>
