<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all"
    android:layout_width="800px"
    android:layout_height="400px"
    android:orientation="vertical"
    android:paddingTop="20px"
    android:background="@drawable/share_image_background_gradient">

    <TextView
        android:id="@+id/share_image_layout_activity_type"
        android:layout_width="800px"
        android:layout_height="65px"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/activity_type_running"
        android:textAlignment="center"
        android:textColor="@color/colorLightGrey"
        android:textSize="50px"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/share_image_layout_header"
        android:layout_width="800px"
        android:layout_height="52px"
        android:textStyle="bold"
        android:textColor="@color/colorLightGrey"
        android:textSize="36px"
        android:text="@string/activity_stats"
        android:textAlignment="center"
        android:layout_below="@+id/share_image_layout_activity_type"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20px" />

    <TextView
        android:id="@+id/share_image_layout_total_distance_label"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingStart="50px"
        android:layout_marginTop="20px"
        android:textSize="24px"
        android:text="@string/total_distance"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/share_image_layout_header"/>

    <TextView
        android:id="@+id/share_image_layout_total_distance_value"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingEnd="50px"
        android:layout_marginLeft="400px"
        android:layout_marginTop="20px"
        android:textSize="24px"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_below="@+id/share_image_layout_header"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/share_image_layout_calories_burned_label"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingStart="50px"
        android:layout_marginTop="15px"
        android:textSize="24px"
        android:textStyle="bold"
        android:text="@string/calories_burned"
        android:textColor="@color/colorLightGrey"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/share_image_layout_total_distance_label" />

    <TextView
        android:id="@+id/share_image_layout_calories_burned_value"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingEnd="50px"
        android:layout_marginLeft="400px"
        android:layout_marginTop="15px"
        android:textSize="24px"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_below="@+id/share_image_layout_total_distance_label"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/share_image_layout_average_velocity_label"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingStart="50px"
        android:layout_marginTop="15px"
        android:textSize="24px"
        android:text="@string/average_velocity_label"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/share_image_layout_calories_burned_label" />

    <TextView
        android:id="@+id/share_image_layout_average_velocity_value"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingEnd="50px"
        android:layout_marginLeft="400px"
        android:layout_marginTop="15px"
        android:textSize="24px"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_below="@+id/share_image_layout_calories_burned_label"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/share_image_layout_total_time_label"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingStart="50px"
        android:layout_marginTop="15px"
        android:textSize="24px"
        android:text="@string/total_time"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/share_image_layout_average_velocity_value" />

    <TextView
        android:id="@+id/share_image_layout_total_time_value"
        android:layout_width="400px"
        android:layout_height="35px"
        android:paddingEnd="50px"
        android:layout_marginLeft="400px"
        android:layout_marginTop="15px"
        android:textSize="24px"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/colorLightGrey"
        android:textStyle="bold"
        android:layout_below="@+id/share_image_layout_average_velocity_value"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>